# smfmodel

./: README.md  pyproject.toml  requirements.txt
notebooks/markov_models/: markov_modeling_test.ipynb
src/smfmodel/: __init__.py
src/smfmodel/base/: __init__.py  random_transition_matrix.py  solve_steady_state.py
src/smfmodel/markov_models/: __init__.py  check_detailed_balance.py  detailed_balance_deviation.py  energy_dissipation.py  generate_transition_matrix_solutions.py  load_transitions_into_adata.py  random_transition_matrix.py  solve_steady_state.py
src/smfmodel/plotting/: __init__.py  plot_2D_contour.py  plot_hist.py
src/smfmodel/stats/: __init__.py  clr_transform.py  manova.py  permutation_test.py
