[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smfmodel"
description = "Modeling of Single Molecule Footprinting data in Python."
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Joseph McKenna"}
]
maintainers = [
    {name = "Joseph McKenna", email = "jkmckenna@berkeley.edu"}
]
keywords = [
  "single-molecule-footprinting",
  "chromatin-accessibility",
  "protein-dna-binding",
  "nanopore",
  "single-locus",
  "anndata",
  "machine-learning"
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "anndata>=0.10.0",
    "networkx>=3.2",
    "numpy>=1.22.0,<2",
    "pandas>=1.4.2",
    "scanpy>=1.9",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "seaborn>=0.11",
    "torch>=1.9.0",
    "tqdm"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jkmckenna/smfmodel"


[tool.hatch.build.targets.wheel]
packages = ["src/smfmodel"]

[tool.hatch.version]
path = "src/smfmodel/_version.py"
